# pytera

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: main.yml
src/: lib.rs
tests/: test_pytera.py
